web_Design commit

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -462,7 +462,7 @@
                                 <li><a class="dropdown-item" href="{% url "my_app:creative" %}">Creatives</a></li>
                                 <li><a class="dropdown-item" href="#">Video Ads</a></li>
                                 <li><a class="dropdown-item" href="#">Influencer Ads</a></li>
-                                <li><a class="dropdown-item" href="#">Web design</a></li>
+                                <li><a class="dropdown-item" href="{% url "my_app:web_design" %}">Web design</a></li>
                                 <li><a class="dropdown-item" href="#">Logo design</a></li>
                                 <li><a class="dropdown-item" href="#">Testimonials</a></li>
                             </ul>
