--- a/my_app/templates/my_app/contact.html
+++ b/my_app/templates/my_app/contact.html
@@ -143,7 +143,7 @@
 </div>
 </div>
 </div> 
-
+<div class="container">
 <div class="row row-cols-1 row-cols-md-3 g-4  me-0">
   <div class="col">
     <div class="card">
@@ -225,5 +225,6 @@
       </div>
     </div>
   </div>
+</div>
 </div>
 {% endblock  %}
