--- a/templates/layout.html
+++ b/templates/layout.html
@@ -412,8 +412,8 @@
     <section class="sticky-top">
         <nav class="navbar navbar-expand-lg  ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="{% static 'images/NKTBG-removebg-preview.png' %}" alt="Logo" width="150" height="100">
+                <a class="navbar-brand ms-3" href="#">
+                    <img src="{% static 'images/NKTBG-removebg-preview.png' %}" alt="Logo" width="120" height="120">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" style="background-color:aqua;"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -680,7 +680,7 @@
     <div class="container-fluid mt-5" height="200" width="300">
         <div class="row col-lg-12 col-md-12 me-0 footer">
             <div class="col-lg-3 col-md-3">
-                <img src="{% static 'images/NKTBG-removebg-preview.png'%}" height="150" width="200">
+                <img src="{% static 'images/NKTBG-removebg-preview.png'%}" height="180" width="180" class="ms-3">
                 <ul class="d-flex" style="list-style:none;">
                     <li class="ms-3">
                         <a href="https://www.facebook.com/profile.php?id=61577864141320" style="color:blue ;">
