--- a/my_app/templates/my_app/about.html
+++ b/my_app/templates/my_app/about.html
@@ -90,8 +90,8 @@
 }
 
 .hero-section img {
-  width:500px;
-  height:400px ;
+  width:420px;
+  height:350px ;
   display: block;
 }
 
@@ -167,8 +167,7 @@ Our commitment to innovation has earned us recognition, including the prestigiou
 We don’t just market. We celebrate, elevate, and amplify. And our clients below are living proof.</p>
 </div>
 <div class="col-lg-3 col-md-3 img">
-  <img src="https://cssanimation.io/blog/wp-content/uploads/2023/09/Teamwork-And-Collaboration-How-To-Improve-Both-At-Work-1.jpg"alt="image" width="auto" height="400px">
-</div>
+  <img src="{% static "images/pics02.jpg" %}" height="" width="200">
 </div>
 
 </section>
