--- a/my_app/templates/my_app/about.html
+++ b/my_app/templates/my_app/about.html
@@ -177,9 +177,11 @@ We don’t just market. We celebrate, elevate, and amplify. And our clients belo
     <div class="row justify-content-center align-items-center">
       <div class="col-lg-4 text-center text-lg-end mb-3 mb-lg-0">
         <div class="text">
-          <h2 class="text-warning text-center">🚀 Our Mission</h2>
+          <h2 class="text-warning text-center me-4">🚀 Our Mission</h2>
           <p class="text-center">
-          We live and breathe digital. The Internet is our home.</p>
+          <span class="me-4">To be the most spearheading, adaptive,</span> professional employer and service provider<br> by timely and seamlessly 
+          delivering quality products and services,
+           whilst upholding the highest standards of ethics and governance.</p>
         </div>
       </div>
 
@@ -191,8 +193,10 @@ We don’t just market. We celebrate, elevate, and amplify. And our clients belo
 
       <div class="col-lg-4 text-center text-lg-start">
         <div class="text">
-          <h2 class="text-warning text-center">🌟 Our Vision</h2>
-          <p class="text-center">We envision a smarter, connected, digital future where every brand thrives online.</p>
+          <h2 class="text-warning text-center me-4">🌟 Our Vision</h2>
+          <p class="">To establish a socially responsible, glocal, and enterprising collective,
+             recognized and reputed<br> for its excellence in IT innovation,
+             ethical practices, and user-centric approach to <br>service providing.</p>
         </div>
       </div>
     </div>
