--- a/templates/layout.html
+++ b/templates/layout.html
@@ -452,7 +452,7 @@
                                 <li><a class="dropdown-item" href="#">Influencer Ads</a></li>
                                 <li><a class="dropdown-item" href="{% url "my_app:web_design" %}">Web design</a></li>
                                 <li><a class="dropdown-item" href="#">Logo design</a></li>
-                                <li><a class="dropdown-item" href="#">Testimonials</a></li>
+                                <li><a class="dropdown-item" href="{% url "my_app:testi" %}">Testimonials</a></li>
                             </ul>
                         </li>
                         
