--- a/my_app/templates/my_app/add_job.html
+++ b/my_app/templates/my_app/add_job.html
@@ -1,13 +1,13 @@
-{% extends "layout.html" %}
+{% extends 'layout.html' %}
 {% load static %}
-{% block title %}add_new.job{% endblock  %}
-{% block  content%}
-
-<h2>Add a New Job</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Post Job</button>
-</form>
-
-{% endblock  %}
+{% block title %}
+  add_new.job
+{% endblock %}
+{% block content %}
+  <h2>Add a New Job</h2>
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Post Job</button>
+  </form>
+{% endblock %}
