--- a/my_app/templates/my_app/b2b.html
+++ b/my_app/templates/my_app/b2b.html
@@ -1,38 +1,43 @@
-{% extends "layout.html" %}
+{% extends 'layout.html' %}
 {% load static %}
-{% block title %}B2B Partner Programs{% endblock  %}
+{% block title %}
+  B2B Partner Programs
+{% endblock %}
 {% block content %}
-<style>
-.partner_section{
-    display:flex;
-    justify-content:center;
-    background: linear-gradient(270deg, #ff4b2b, #ff416c, #1e90ff, #23a6d5, #0f2027);
-    background-size: 800% 800%;
-    height: 150px;
-    animation: gradientBG 15s ease infinite;
-}
-@keyframes gradientBG {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
-}
-h2{
-    font-size:2.7rem;
-}
-@media(max-width:768px){
-    h2{
-        font-size:2.1rem;
+  <style>
+    .partner_section {
+      display: flex;
+      justify-content: center;
+      background: linear-gradient(270deg, #ff4b2b, #ff416c, #1e90ff, #23a6d5, #0f2027);
+      background-size: 800% 800%;
+      height: 150px;
+      animation: gradientBG 15s ease infinite;
     }
-}
+    @keyframes gradientBG {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
+    }
+    h2 {
+      font-size: 2.7rem;
+    }
+    @media (max-width: 768px) {
+      h2 {
+        font-size: 2.1rem;
+      }
+    }
+  </style>
 
-</style>
-
-<div class="partner_section">
+  <div class="partner_section">
     <div class="col-lg-12">
-    <h2 class="text-white mt-3 text-center"> B2B Partner Programs</h2>
-    <span><b class="text-warning d-flex justify-content-center">Join the neemkarolitechnologies Partner Program
-    Let’s Grow Together, Digitally.</b></span>
-</div>
-</div>
-
-{% endblock  %}
+      <h2 class="text-white mt-3 text-center">B2B Partner Programs</h2>
+      <span><b class="text-warning d-flex justify-content-center">Join the neemkarolitechnologies Partner Program Let’s Grow Together, Digitally.</b></span>
+    </div>
+  </div>
+{% endblock %}
