--- a/my_app/templates/my_app/creative.html
+++ b/my_app/templates/my_app/creative.html
@@ -1,47 +1,54 @@
-{% extends "layout.html" %}
+{% extends 'layout.html' %}
 {% load static %}
-{% block title%}Creatives{% endblock  %}
+{% block title %}
+  Creatives
+{% endblock %}
 {% block content %}
-<style>
-.creative-section{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 150px;
-  background: linear-gradient(-45deg, #ff416c, #ff4b2b, #1e3c72, #2a5298);
-  background-size: 800% 800%;
-  animation: gradientMove 10s ease infinite;
-}
-.creative-section h2{
-    font-size:50px;
-}
-@keyframes gradientMove {
-  0% {background-position: 0% 50%;}
-  50% {background-position: 100% 50%;}
-  100% {background-position: 0% 50%;}
-}
-@media(max-width:768px){
-.card-1{
-    margin-top:10px;
-}
-}
-</style>
+  <style>
+    .creative-section {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 150px;
+      background: linear-gradient(-45deg, #ff416c, #ff4b2b, #1e3c72, #2a5298);
+      background-size: 800% 800%;
+      animation: gradientMove 10s ease infinite;
+    }
+    .creative-section h2 {
+      font-size: 50px;
+    }
+    @keyframes gradientMove {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
+    }
+    @media (max-width: 768px) {
+      .card-1 {
+        margin-top: 10px;
+      }
+    }
+  </style>
 
-<div class="col-lg-12 col-md-12 creative-section">
+  <div class="col-lg-12 col-md-12 creative-section">
     <h2 class="text-white">Creatives</h2>
-</div>
-<div class="container">
-<div class="row d-flex mt-2">
-  <div class=" col-lg-4 col-md-4 card-1">
-    <img src="https://digiphlox.com/wp-content/uploads/2024/04/Ad22.jpg" class="card-img-top" alt="...">
   </div>
-  <div class=" col-lg-4 col-md-4 card-1">
-    <img src="https://digiphlox.com/wp-content/uploads/2024/04/AAC-Blocks-1536x1536.jpg" class="card-img-top" alt="...">
+  <div class="container">
+    <div class="row d-flex mt-2">
+      <div class="col-lg-4 col-md-4 card-1">
+        <img src="https://digiphlox.com/wp-content/uploads/2024/04/Ad22.jpg" class="card-img-top" alt="..." />
+      </div>
+      <div class="col-lg-4 col-md-4 card-1">
+        <img src="https://digiphlox.com/wp-content/uploads/2024/04/AAC-Blocks-1536x1536.jpg" class="card-img-top" alt="..." />
+      </div>
+      <div class="col-lg-4 col-md-4 card-1">
+        <img src="https://digiphlox.com/wp-content/uploads/2024/04/ArtboardsArtboard-5.jpg" class="card-img-top" alt="..." />
+      </div>
+    </div>
   </div>
-  <div class=" col-lg-4 col-md-4 card-1">
-    <img src="https://digiphlox.com/wp-content/uploads/2024/04/ArtboardsArtboard-5.jpg" class="card-img-top" alt="...">
-  </div>
-</div>
-</div>
-
-{% endblock  %}
+{% endblock %}
