--- a/my_app/templates/my_app/testimonial.html
+++ b/my_app/templates/my_app/testimonial.html
@@ -1,26 +1,21 @@
-{% extends "layout.html" %}
+{% extends 'layout.html' %}
 {% load static %}
-{% block title %}Testimonials{% endblock  %}
+{% block title %}
+  Testimonials
+{% endblock %}
 {% block content %}
-<style>
-    .testi-content{
-        display:flex;
-        justify-content:center;
-        align-items:center;
-        background:linear-gradient(to right, #2754adff, #74d0c9ff);
-        height:150px;
+  <style>
+    .testi-content {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(to right, #2754adff, #74d0c9ff);
+      height: 150px;
     }
-
-</style>
-<div class="testi-section">
+  </style>
+  <div class="testi-section">
     <div class="testi-content text-white">
-        <h1>Testimonial</h1>
+      <h1>Testimonial</h1>
     </div>
-</div>
-
-
-
-
-
-
-{% endblock  %}
+  </div>
+{% endblock %}
