--- a/my_app/templates/my_app/creative.html
+++ b/my_app/templates/my_app/creative.html
@@ -41,13 +41,13 @@
   <div class="container">
     <div class="row d-flex mt-2">
       <div class="col-lg-4 col-md-4 card-1">
-        <img src="https://digiphlox.com/wp-content/uploads/2024/04/Ad22.jpg" class="card-img-top" alt="..." />
+        <img src="https://graphicdesignjunction.com/wp-content/uploads/2019/05/landing+page+design+25.jpg" class="card-img-top" alt="..." />
       </div>
       <div class="col-lg-4 col-md-4 card-1">
-        <img src="https://digiphlox.com/wp-content/uploads/2024/04/AAC-Blocks-1536x1536.jpg" class="card-img-top" alt="..." />
+        <img src="https://i.pinimg.com/originals/05/46/46/05464693268fd1a5c3f82dc7c27c7467.jpg" class="card-img-top" alt="..." />
       </div>
       <div class="col-lg-4 col-md-4 card-1">
-        <img src="https://digiphlox.com/wp-content/uploads/2024/04/ArtboardsArtboard-5.jpg" class="card-img-top" alt="..." />
+        <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/dbe02782898751.5d2c2cc5de649.png" class="card-img-top" alt="..." />
       </div>
     </div>
   </div>
