--- a/my_app/templates/my_app/index.html
+++ b/my_app/templates/my_app/index.html
@@ -297,7 +297,7 @@
   </div>
 </div>
 
-       <div class="container-fluid intro-section">
+       <div class="container-fluid intro-section mt-4">
             <div class="row me-0">
                 <div class="col-lg-8 col-md-8 ">
                    <h3><b class="text-info intro ms-5">Introducing Our Work</b></h3>
