--- a/my_app/templates/my_app/content.html
+++ b/my_app/templates/my_app/content.html
@@ -98,6 +98,18 @@ h2{
   font-size: 15px;
   line-height: 1.6;
 }
+@media(max-width:768px){
+  .card{
+    width:220px;
+    height:220px;
+  }
+  .card p{
+    font-size:10px;
+  }
+  .content-head{
+    font-size:22px;
+  }
+}
 
 </style>
 <div class="content-head">
