--- a/my_app/templates/my_app/smm.html
+++ b/my_app/templates/my_app/smm.html
@@ -136,10 +136,23 @@ h2{
     transform: translateY(0);
   }
 }
-
+@media(max-width:768px){
+  .smm-card{
+    width: 220px;
+    height: 220px;
+    display:block;
+    align-items:center;
+  }
+  .smm-card p {
+    font-size:10px;
+  }
+  .smm-box h2{
+    font-size:22px;
+  }
+}
 </style>
   <div class="smm-box">
-    <h2>🚀 Social Media Marketing</h2>
+    <h2>🚀Social Media Marketing</h2>
   </div>
   <div class="smm-section">
     <div class="smm-cards">
