--- a/my_app/templates/my_app/web.html
+++ b/my_app/templates/my_app/web.html
@@ -118,6 +118,10 @@
       .puzzle-text {
         font-size: 2.2rem;
       }
+      .service-card{
+        width:220px;
+        height:220px;
+      }
     }
   </style>
 
