--- a/templates/layout.html
+++ b/templates/layout.html
@@ -54,15 +54,15 @@
       }
       @media (max-width: 578px) {
         footer a {
-          color: black;
+          color: #061fd8ff;
         }
         .colorchange {
-          color: black !important;
+          color: #061fd8ff !important;
         }
       }
       @media (max-width: 768px) {
         footer h3 {
-          color: black !important;
+          color: #061fd8ff !important;
         }
       }
       .image-container {
