--- a/my_app/templates/my_app/content.html
+++ b/my_app/templates/my_app/content.html
@@ -100,11 +100,14 @@ h2{
 }
 @media(max-width:768px){
   .card{
-    width:220px;
-    height:220px;
+    width:280px;
+    height:280px;
+    display:block;
+    align-items:center;
+    justify-content:center;
   }
   .card p{
-    font-size:10px;
+    font-size:15px;
   }
   .content-head{
     font-size:22px;
