--- a/my_app/templates/my_app/web.html
+++ b/my_app/templates/my_app/web.html
@@ -119,8 +119,10 @@
         font-size: 2.2rem;
       }
       .service-card{
-        width:220px;
-        height:220px;
+        width:280px;
+        height:280px;
+        display:block;
+        align-items:center;
       }
     }
   </style>
