--- a/my_app/templates/my_app/content.html
+++ b/my_app/templates/my_app/content.html
@@ -103,7 +103,7 @@ h2{
     width:280px;
     height:280px;
     display:block;
-    align-items:center;
+    align-items:center !important;
     justify-content:center;
   }
   .card p{
