--- a/templates/layout.html
+++ b/templates/layout.html
@@ -47,22 +47,22 @@
         }
       }
       footer a {
-        color: white;
+        color: black;
       }
       footer {
-        background: linear-gradient(to right, white, #01265d);
+        background:lightgrey;
       }
       @media (max-width: 578px) {
         footer a {
-          color: #061fd8ff;
+          color:black;
         }
         .colorchange {
-          color: #061fd8ff !important;
+          color: black !important;
         }
       }
       @media (max-width: 768px) {
         footer h3 {
-          color: #061fd8ff !important;
+          color: black !important;
         }
       }
       .image-container {
@@ -398,6 +398,21 @@
       
       header {
         font-family: 'Inter', 'Roboto', 'Open Sans', sans-serif !important;
+      }
+      @media(max-width:768px){
+        .footer img{
+          padding-left:0px;
+        }
+        .footer ul{
+          padding:0px;
+          margin-left:0px !important;
+        }
+        .ul{
+          padding:1.8rem !important;
+        }
+        footer svg{
+          padding-left:0px;
+        }
       }
     </style>
 
@@ -739,10 +754,10 @@
       <div class="container-fluid mt-5" height="200" width="300">
         <div class="row col-lg-12 col-md-12 me-0 footer">
           <div class="col-lg-3 col-md-3">
-            <img src="{% static 'images/NKTBG-removebg-preview.png' %}" height="180" width="180" class="ms-2" />
+            <img src="{% static 'images/NKTBG-removebg-preview.png' %}" height="180" width="180" style="color:black;"/>
             <ul class="d-flex" style="list-style:none;">
               <li class="ms-3">
-                <a href="https://www.facebook.com/profile.php?id=61577864141320" style="color:blue ;">
+                <a href="https://www.facebook.com/profile.php?id=61577864141320" style="color:black ;">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                     <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951" />
                   </svg>
@@ -750,14 +765,14 @@
               </li>
 
               <li class="ms-3">
-                <a href="https://www.linkedin.com/company/neemkaroli-technologies/?viewAsMember=true" style="color:blue ">
+                <a href="https://www.linkedin.com/company/neemkaroli-technologies/?viewAsMember=true" style="color:black ">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                     <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
                   </svg>
                 </a>
               </li>
               <li class="ms-3">
-                <a href="#" style="color:blue ;">
+                <a href="#" style="color:black ;">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
                     <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
                   </svg>
@@ -766,7 +781,7 @@
             </ul>
           </div>
           <div class="col-lg-3 col-md-3 mt-3">
-            <h3 class="ms-4" style="color:white;">Explore</h3>
+            <h3 class="margin-left:2px;" style="color:black;">Explore</h3>
             <ul>
               <li>
                 <a href="{% url 'my_app:home_two' %}">Home</a>
@@ -786,41 +801,36 @@
             </ul>
           </div>
           <div class="col-lg-3 col-md-3 mt-3">
-            <h3 class="ms-1" style="color:white;">Services</h3>
-            <ul>
+            <h3 class="ms-1" style="color:black;">Services</h3>
+            <ul class="ul">
               <li>
                 <a href="{% url 'my_app:media' %}" style="margin-left:-30px;">Social Media Marketing</a>
               </li>
               <li>
                 <a href="{% url 'my_app:web' %}" style="margin-left:-30px;">Website Development</a>
               </li>
-              <li>
-                <a href="#" style="margin-left:-30px;">Online Advertising</a>
-              </li>
-              <li>
-                <a href="#" style="margin-left:-30px;">influence Marketing</a>
-              </li>
+              
               <li>
                 <a href="{% url 'my_app:about' %}" style="margin-left:-30px;">Search Engine otimisation</a>
               </li>
             </ul>
           </div>
           <div class="col-lg-3 col-md-3 mt-3">
-            <h3 style="color:white;">Get In Touch</h3>
+            <h3 style="color:black;">Get In Touch</h3>
             <a href="#" class="d-flex">
-              <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-geo-alt-fill colorchange" viewBox="0 0 16 16" style="color:white;">
+              <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-geo-alt-fill colorchange" viewBox="0 0 16 16" style="color:black;">
                 <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6" />
               </svg>
               <p class="ms-2 mt-2">Haldwani Branch:Neemkaroli House, Plot No 86, Heera Nagar, Haldwani, Haldwani, India, Uttarakhand</p>
             </a>
             <a href="https://mail.google.com/mail/?view=cm&fs=1&to=sales@neemkarolitechnologies.com" class="d-flex">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill mt-1 colorchange" viewBox="0 0 16 16" style="color:white;">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill mt-1 colorchange" viewBox="0 0 16 16" style="color:black;">
                 <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z" />
               </svg>
               <p class="ms-2">Mail Us</p>
             </a>
             <a href="tel:+919389149580" class="d-flex">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill mt-1 colorchange" viewBox="0 0 16 16" style="color:white;">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill mt-1 colorchange" viewBox="0 0 16 16" style="color:black;">
                 <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
               </svg>
               <p class="ms-2">9389149580</p>
