--- a/templates/layout.html
+++ b/templates/layout.html
@@ -534,16 +534,14 @@
                     <a class="dropdown-item" href="{% url 'my_app:creative' %}">Creatives</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#">Video Ads</a>
+                    <a class="dropdown-item" href="{% url "my_app:video" %}">Video Ads & Gallery</a>
                   </li>
-                  <li>
-                    <a class="dropdown-item" href="#">Influencer Ads</a>
-                  </li>
+                  
                   <li>
                     <a class="dropdown-item" href="{% url 'my_app:web_design' %}">Web design</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#">Logo design</a>
+                    <a class="dropdown-item" href="{% url "my_app:logo" %}">Logo design</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="{% url 'my_app:testi' %}">Testimonials</a>
